// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoriesButtonWrapper tests should render correctly 1`] = `
<div>
  <div
    class="MuiBox-root css-1nnf5qx"
    style="webkit-transform: none; transform: none; webkit-transition: -webkit-transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
  >
    <div
      class="MuiBox-root css-1lm7c2e"
    >
      <div
        class="MuiBox-root css-13pmxen"
      />
      <h5
        class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter css-wc1ui5-MuiTypography-root"
      >
        Browse
      </h5>
      <div
        class="MuiBox-root css-1xfrdmu"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeLarge css-1yy1t52-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg>
            delete.svg
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
    />
    <div
      class="MuiBox-root css-ekan51"
    >
      <button
        class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-lw1dhn-MuiButtonBase-root-MuiButton-root"
        data-testid="category-back"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
        >
          <svg>
            chevron-left.svg
          </svg>
        </span>
        Back
      </button>
    </div>
    <div
      class="MuiBox-root css-s2j4kj"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-1rcon39-MuiTypography-root"
        data-testid="category-header"
      >
        Product Categories (8)
      </p>
    </div>
    <div
      class="MuiBox-root css-6ezlc4"
    >
      <ul
        class="MuiList-root css-1kf6xy5-MuiList-root"
      >
        <div
          class="MuiListItemButton-root MuiListItemButton-gutters MuiButtonBase-root css-hrv000-MuiButtonBase-root-MuiListItemButton-root"
          data-testid="category1-0"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiListItemText-root css-1y7mhd5-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-zvlsvz-MuiTypography-root"
            >
              Faucets, Fixtures & Appliances
            </span>
          </div>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </div>
        <div
          class="MuiListItemButton-root MuiListItemButton-gutters MuiButtonBase-root css-hrv000-MuiButtonBase-root-MuiListItemButton-root"
          data-testid="category1-1"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiListItemText-root css-1y7mhd5-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-zvlsvz-MuiTypography-root"
            >
              Plumbing Installation, Tools, Hardware & Safety
            </span>
          </div>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </div>
        <div
          class="MuiListItemButton-root MuiListItemButton-gutters MuiButtonBase-root css-hrv000-MuiButtonBase-root-MuiListItemButton-root"
          data-testid="category1-2"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiListItemText-root css-1y7mhd5-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-zvlsvz-MuiTypography-root"
            >
              Pipe & Fittings
            </span>
          </div>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </div>
        <div
          class="MuiListItemButton-root MuiListItemButton-gutters MuiButtonBase-root css-hrv000-MuiButtonBase-root-MuiListItemButton-root"
          data-testid="category1-3"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiListItemText-root css-1y7mhd5-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-zvlsvz-MuiTypography-root"
            >
              Heating & Cooling
            </span>
          </div>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </div>
        <div
          class="MuiListItemButton-root MuiListItemButton-gutters MuiButtonBase-root css-hrv000-MuiButtonBase-root-MuiListItemButton-root"
          data-testid="category1-4"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiListItemText-root css-1y7mhd5-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-zvlsvz-MuiTypography-root"
            >
              Hot Water, Valves, Irrigation & Pumps
            </span>
          </div>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </div>
        <div
          class="MuiListItemButton-root MuiListItemButton-gutters MuiButtonBase-root css-hrv000-MuiButtonBase-root-MuiListItemButton-root"
          data-testid="category1-5"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiListItemText-root css-1y7mhd5-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-zvlsvz-MuiTypography-root"
            >
              TBC
            </span>
          </div>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </div>
        <div
          class="MuiListItemButton-root MuiListItemButton-gutters MuiButtonBase-root css-hrv000-MuiButtonBase-root-MuiListItemButton-root"
          data-testid="category1-6"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiListItemText-root css-1y7mhd5-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-zvlsvz-MuiTypography-root"
            >
              Faucets, Fixtures Appliances
            </span>
          </div>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </div>
        <div
          class="MuiListItemButton-root MuiListItemButton-gutters MuiButtonBase-root css-hrv000-MuiButtonBase-root-MuiListItemButton-root"
          data-testid="category1-7"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiListItemText-root css-1y7mhd5-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-zvlsvz-MuiTypography-root"
            >
              Faucets, FiXtures & Appliances
            </span>
          </div>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </div>
      </ul>
      <div
        class="MuiBox-root css-8zx45r"
      >
        <ul
          class="MuiList-root css-172nema-MuiList-root"
          style="visibility: hidden; webkit-transform: translateX(414px); transform: translateX(414px);"
        />
      </div>
      <div
        class="MuiBox-root css-8zx45r"
      >
        <ul
          class="MuiList-root css-172nema-MuiList-root"
          style="visibility: hidden; webkit-transform: translateX(414px); transform: translateX(414px);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`CategoriesButtonWrapper tests should render correctly on loading 1`] = `
<div>
  <div
    class="MuiBox-root css-1nnf5qx"
    style="webkit-transform: none; transform: none; webkit-transition: -webkit-transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
  >
    <div
      class="MuiBox-root css-1lm7c2e"
    >
      <div
        class="MuiBox-root css-13pmxen"
      />
      <h5
        class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter css-wc1ui5-MuiTypography-root"
      >
        Browse
      </h5>
      <div
        class="MuiBox-root css-1xfrdmu"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeLarge css-1yy1t52-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg>
            delete.svg
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
    />
    <div
      class="MuiBox-root css-ekan51"
    >
      <button
        class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-lw1dhn-MuiButtonBase-root-MuiButton-root"
        data-testid="category-back"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
        >
          <svg>
            chevron-left.svg
          </svg>
        </span>
        Back
      </button>
    </div>
    <div
      class="MuiBox-root css-1nen2z4"
      data-testid="loader-component"
    >
      <div
        class="MuiBox-root css-hyxlzm"
      >
        <span
          aria-valuenow="100"
          class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1wyqyef-MuiCircularProgress-root"
          role="progressbar"
          style="width: 80px; height: 80px; transform: rotate(-90deg);"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="19.5"
              stroke-width="5"
              style="stroke-dasharray: 122.522; stroke-dashoffset: 0.000px;"
            />
          </svg>
        </span>
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1gse1c1-MuiCircularProgress-root"
          role="progressbar"
          style="width: 80px; height: 80px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="19.5"
              stroke-width="5"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
